# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.  
#
# Fichier ChangeLog
# 2010-10-01  Nicolas Hernandez  <nicolas.hernandez@gmail.com>

2011-02-25  Nicolas Hernandez  <nicolas.hernandez@gmail.com>
  * refactoring de desc/ vers desc/shell et modif de tous les AAE dépendants
  * Ajout de desc/test* : desc/test-ALERT-create-outputAnnotation-in-distinct-outputView-than-inputView_AAE.xml desc/test-PASS-inputAnnotation-outputAnnotation_AAEStyleMap.xml desc/test-FAIL-inputView-inputAnnotation-outputView-outputAnnotation-tous-null_AAE.xml desc/test-PASS-two-inputViews-outputAnnotation_AAE.xml desc/test-FAIL-inputView-create-annotation-on-no-existing-outputView_AAE.xml desc/test-PASS-two-inputViews-outputView_AAE.xml
  * Modification de ShellAE (1 majeur notamment suite à mise à jour de uima-common)

2010-10-09  Nicolas Hernandez  <nicolas.hernandez@gmail.com>
	* refactoring: execute -> analyse 
	* ShellAE.java: mise en commentaire des commandes logs
	* desc/*: Suite au refactoring de UIMA-common : paramètre InputAnnotationString -> InputAnnotationStringArray
	
2010-10-07  Nicolas Hernandez  <nicolas.hernandez@gmail.com>
	* modularisation de src/fr/univnantes/lina/util et src/fr/univnantes/lina/uima/util et externalisation dans projet distinct
    * src/fr/univnantes/lina/uima/util/AnalysisEngine.java: classe Abstract permettant la gestion générique des input/output view/annotation/feature
    * ShellAE.java ainsi que ShellAE.xml et UIMAUtilities.java: 
    	* factoriser la gestion de la création des view/annotation pour l'input view et l'input annotation
    	* ajout du paramètre inputFeature pour ne pas restreindre à la feature coveredText des annotations à traiter
    * example-sequence-inputView-outputAnnotation-then-inputAnnotation-outputView_AAE.xml: ajout du descripteur