@@ -22,6 +22,9 @@
 # 2010-10-01  Nicolas Hernandez  <nicolas.hernandez@gmail.com>
 
 2011-02-25  Nicolas Hernandez  <nicolas.hernandez@gmail.com>
+  * création du package desc/shell/examples, renommage des test* en EXAMPLE et correction de l'example de TreeTagger qui n'avait pas suivi l'évolution à la multi value de l'inputView, MAJ du README, et référencement d'un bug
+
+2011-02-25  Nicolas Hernandez  <nicolas.hernandez@gmail.com>
   * refactoring de desc/ vers desc/shell et modif de tous les AAE dépendants
   * Ajout de desc/test* : desc/test-ALERT-create-outputAnnotation-in-distinct-outputView-than-inputView_AAE.xml desc/test-PASS-inputAnnotation-outputAnnotation_AAEStyleMap.xml desc/test-FAIL-inputView-inputAnnotation-outputView-outputAnnotation-tous-null_AAE.xml desc/test-PASS-two-inputViews-outputAnnotation_AAE.xml desc/test-FAIL-inputView-create-annotation-on-no-existing-outputView_AAE.xml desc/test-PASS-two-inputViews-outputView_AAE.xml
   * Modification de ShellAE (1 majeur notamment suite à mise à jour de uima-common)
